--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      if (global === undefined) {
+        var global = window;
+        var global = alert;
+      }
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
